[gd_scene load_steps=4 format=3 uid="uid://k5eevl7fmpye"]

[ext_resource type="Script" path="res://clock.gd" id="1_auwnb"]

[sub_resource type="Gradient" id="Gradient_r62kh"]
offsets = PackedFloat32Array(0.98, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_0dj2b"]
gradient = SubResource("Gradient_r62kh")
width = 256
height = 256
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Clock" type="Node2D" parent="."]
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(2.315, 2.315)
script = ExtResource("1_auwnb")

[node name="Face" type="Sprite2D" parent="Clock"]
texture = SubResource("GradientTexture2D_0dj2b")

[node name="Hour0" type="Polygon2D" parent="Clock/Face"]
color = Color(0.615686, 0, 0.321569, 1)
offset = Vector2(0, -104)
polygon = PackedVector2Array(-8, -3.99999, 8, -3.99999, 0, 10)

[node name="Hour1" type="Polygon2D" parent="Clock/Face"]
rotation = 0.523599
color = Color(0, 0, 0, 1)
offset = Vector2(0, -104)
polygon = PackedVector2Array(-8, -3.99999, 8, -3.99999, 0, 10)

[node name="Hour2" type="Polygon2D" parent="Clock/Face"]
rotation = 1.0472
color = Color(0, 0, 0, 1)
offset = Vector2(0, -104)
polygon = PackedVector2Array(-8, -3.99999, 8, -3.99999, 0, 10)

[node name="Hour3" type="Polygon2D" parent="Clock/Face"]
rotation = 1.5708
color = Color(0, 0, 0, 1)
offset = Vector2(0, -104)
polygon = PackedVector2Array(-8, -3.99999, 8, -3.99999, 0, 10)

[node name="Hour4" type="Polygon2D" parent="Clock/Face"]
rotation = 2.0944
color = Color(0, 0, 0, 1)
offset = Vector2(0, -104)
polygon = PackedVector2Array(-8, -3.99999, 8, -3.99999, 0, 10)

[node name="Hour5" type="Polygon2D" parent="Clock/Face"]
rotation = 2.61799
color = Color(0, 0, 0, 1)
offset = Vector2(0, -104)
polygon = PackedVector2Array(-8, -3.99999, 8, -3.99999, 0, 10)

[node name="Hour6" type="Polygon2D" parent="Clock/Face"]
rotation = 3.14159
color = Color(0, 0, 0, 1)
offset = Vector2(0, -104)
polygon = PackedVector2Array(-8, -3.99999, 8, -3.99999, 0, 10)

[node name="Hour7" type="Polygon2D" parent="Clock/Face"]
rotation = 3.66519
color = Color(0, 0, 0, 1)
offset = Vector2(0, -104)
polygon = PackedVector2Array(-8, -3.99999, 8, -3.99999, 0, 10)

[node name="Hour8" type="Polygon2D" parent="Clock/Face"]
rotation = 4.18879
color = Color(0, 0, 0, 1)
offset = Vector2(0, -104)
polygon = PackedVector2Array(-8, -3.99999, 8, -3.99999, 0, 10)

[node name="Hour9" type="Polygon2D" parent="Clock/Face"]
rotation = 4.71239
color = Color(0, 0, 0, 1)
offset = Vector2(0, -104)
polygon = PackedVector2Array(-8, -3.99999, 8, -3.99999, 0, 10)

[node name="Hour10" type="Polygon2D" parent="Clock/Face"]
rotation = 5.23599
color = Color(0, 0, 0, 1)
offset = Vector2(0, -104)
polygon = PackedVector2Array(-8, -3.99999, 8, -3.99999, 0, 10)

[node name="Hour11" type="Polygon2D" parent="Clock/Face"]
rotation = 5.75959
color = Color(0, 0, 0, 1)
offset = Vector2(0, -104)
polygon = PackedVector2Array(-8, -3.99999, 8, -3.99999, 0, 10)

[node name="HourArm" type="Polygon2D" parent="Clock"]
position = Vector2(0.290359, -0.76342)
color = Color(0, 0, 0, 1)
offset = Vector2(0.29037, 15.2366)
polygon = PackedVector2Array(-16.5807, 5.52685, 15.4193, 5.52685, -0.580714, -82.4732)

[node name="MinuteArm" type="Polygon2D" parent="Clock"]
position = Vector2(0.132858, -0.763419)
scale = Vector2(1, 1.63734)
color = Color(0, 0, 1, 1)
offset = Vector2(0.132869, 21.7618)
polygon = PackedVector2Array(-16.2657, -9.08065, 15.7343, -9.08065, -0.265742, -72.5982)

[node name="SecondArm" type="Polygon2D" parent="Clock"]
position = Vector2(0.132858, -0.763419)
scale = Vector2(1, 1.63734)
color = Color(0.615686, 0, 0.321569, 1)
offset = Vector2(0.132869, 21.7618)
polygon = PackedVector2Array(-8.26574, 0.691273, 7.73426, 0.691273, -0.265742, -77.4842)
